--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+
+# cdktf and terraform ignores
+.terraform
+cdktf.out
+cdktf.log
+*terraform.*.tfstate*
+generated
+
+# src https://github.com/github/gitignore/blob/master/Go.gitignore
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -11,5 +20,41 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+.jsii
+
+*.js
+!jest.config.js
+!jest.setup.js
+!test.js
+*.d.ts
+node_modules
+!tools/build-example.js
+!tools/lint-examples.js
+
+# CDK asset staging directory
+.cdk.staging
+cdktf.out
+
+tsconfig.json
+
+**/.DS_Store
+**/.gen
+**/*.log
+**/coverage
+**/dist
+**/.terraform
+**/*.tfstate
+**/*.tfstate.backup
+
+# https://github.com/github/gitignore/blob/master/Global/VisualStudioCode.gitignore
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+bootstrap.json
+terraform-cdk.github-issues
+.idea
+tsconfig.tsbuildinfo
